fix glitches on small screens

--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -50,7 +50,7 @@ $gutter: $width/100;
   margin: 0px;
   display: flex;
   flex-flow: row wrap;
-  align-self: center;
+  align-items: center;
 
   @if $debug {
     background-color: #ED8181 !important;
@@ -62,6 +62,7 @@ $gutter: $width/100;
     box-sizing: border-box;
     padding: 1em;
     width: $columns_width;
+    overflow: hidden;
 
     @if $debug {
       border: 1px solid black !important;
